--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -306,7 +306,7 @@ jobs:
         -DCMAKE_DOXYGEN_AWESOME_THEME=OFF
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
-        -DCMAKE_TESTING_ENABLED=ON
+        -DCMAKE_TESTING_ENABLED=OFF
 
     - name: Build
       # Build your program with the given configuration
@@ -316,11 +316,11 @@ jobs:
     - name: Install Python Package
       run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
 
-    - name: CTest
-      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest
+    # - name: CTest
+    #   working-directory: ${{github.workspace}}/build
+    #   # Execute tests defined by the CMake configuration.  
+    #   # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+    #   run: ctest
 
     - name: Build Pypi Python Package
       run: |
