Pypi update 0.2.2- Try adding CXX_COMPILER=gcc for Catch

--- a/config/cmake/SuperBuildLinux/CMakeLists.txt
+++ b/config/cmake/SuperBuildLinux/CMakeLists.txt
@@ -128,7 +128,10 @@ ExternalProject_Add(external_catch2
   BINARY_DIR ${DEPS_BUILD_DIR}/Catch2/build
   INSTALL_DIR ${DEPS_INSTALL_PREFIX}/Catch2
   #GIT_REMOTE_UPDATE_STRATEGY    CHECKOUT
-  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${DEPS_INSTALL_PREFIX}/Catch2
+  CMAKE_ARGS 
+    -DCMAKE_INSTALL_PREFIX=${DEPS_INSTALL_PREFIX}/Catch2
+    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+    -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
   # INSTALL_COMMAND  cmake --install ${PROJECT_BINARY_DIR}/../build_external/Catch2/build
 )
 list (APPEND EXTRA_CMAKE_ARGS
