--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "cmake.configureOnOpen": true,
     "cmake.configureArgs": [
         "-DUSE_SUPERBUILD=ON",
-        "-DCMAKE_FF_CXX=ON",
+        "-DCMAKE_FF_CXX=OFF",
         "-DCMAKE_LEGACY_PLANNER=OFF",
         "-DCMAKE_FD=ON",
         "-DCMAKE_TARSKI=ON",
