--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -60,9 +60,9 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/${{env.BUILD_TYPE}}
         -DUSE_SUPERBUILD=ON
-        -DCMAKE_FF_CXX=ON
+        -DCMAKE_FF_CXX=OFF
         -DCMAKE_LEGACY_PLANNER=OFF
-        -DCMAKE_FD=ON
+        -DCMAKE_FD=OFF
         -DCMAKE_TARSKI=ON
         -DCMAKE_DOXYGEN_DOCS=ON
         -DCMAKE_DOXYGEN_FLAT_THEME=ON
@@ -144,14 +144,14 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/${{env.BUILD_TYPE}}
         -DUSE_SUPERBUILD=ON
-        -DCMAKE_FF_CXX=ON
+        -DCMAKE_FF_CXX=OFF
         -DCMAKE_LEGACY_PLANNER=OFF
-        -DCMAKE_FD=ON
+        -DCMAKE_FD=OFF
         -DCMAKE_TARSKI=ON
-        -DCMAKE_DOXYGEN_DOCS=ON
-        -DCMAKE_DOXYGEN_FLAT_THEME=ON
-        -DCMAKE_DOXYGEN_AWESOME_THEME=ON
-        -DCMAKE_SPHINX_DOCS=ON
+        -DCMAKE_DOXYGEN_DOCS=OFF
+        -DCMAKE_DOXYGEN_FLAT_THEME=OFF
+        -DCMAKE_DOXYGEN_AWESOME_THEME=OFF
+        -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
 
@@ -231,7 +231,7 @@ jobs:
         -DUSE_SUPERBUILD=ON
         -DCMAKE_FF_CXX=OFF
         -DCMAKE_LEGACY_PLANNER=OFF
-        -DCMAKE_FD=ON
+        -DCMAKE_FD=OFF
         -DCMAKE_TARSKI=ON
         -DCMAKE_DOXYGEN_DOCS=OFF
         -DCMAKE_DOXYGEN_FLAT_THEME=OFF
@@ -316,7 +316,7 @@ jobs:
         -DUSE_SUPERBUILD=ON
         -DCMAKE_FF_CXX=OFF
         -DCMAKE_LEGACY_PLANNER=OFF
-        -DCMAKE_FD=ON
+        -DCMAKE_FD=OFF
         -DCMAKE_TARSKI=ON
         -DCMAKE_DOXYGEN_DOCS=OFF
         -DCMAKE_DOXYGEN_FLAT_THEME=OFF
@@ -388,7 +388,7 @@ jobs:
         -DUSE_SUPERBUILD=ON
         -DCMAKE_FF_CXX=OFF
         -DCMAKE_LEGACY_PLANNER=OFF
-        -DCMAKE_FD=ON
+        -DCMAKE_FD=OFF
         -DCMAKE_TARSKI=ON
         -DCMAKE_DOXYGEN_DOCS=OFF
         -DCMAKE_DOXYGEN_FLAT_THEME=OFF
