--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -436,7 +436,7 @@ install(DIRECTORY
 )
 install(DIRECTORY
   ${CMAKE_INSTALL_PREFIX}/${REL_PYPI_LAPKT_ROOT}/
-  FILE_PERMISSIONS OWNER_WRITE OWNER_READ
+  USE_SOURCE_PERMISSIONS
   DESTINATION ${CMAKE_SOURCE_DIR}/debug_install/${REL_PYPI_LAPKT_ROOT}
   COMPONENT PYPACKAGE EXCLUDE_FROM_ALL 
 )
