--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -77,7 +77,7 @@ jobs:
         cmake --build ${{github.workspace}}/build
 
     - name: Install Python Package
-      run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+      run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
 
     - name: CTest
       working-directory: ${{github.workspace}}/build
@@ -87,7 +87,7 @@ jobs:
 
     - name: Build Pypi Python Package
       run: |
-        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
         python3 setup.py bdist_wheel --plat-name=manylinux_2_31_x86_64
 
     - name: Pytest
@@ -99,7 +99,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: python-package-distributions
-        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release/dist
+        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/_package/dist
 
 # --------------------------------------------------------------------------- #
 
@@ -161,7 +161,7 @@ jobs:
         cmake --build ${{github.workspace}}/build
 
     - name: Install Python Package
-      run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+      run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
 
     - name: CTest
       working-directory: ${{github.workspace}}/build
@@ -171,7 +171,7 @@ jobs:
 
     - name: Build Pypi Python Package
       run: |
-        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
         python3 setup.py bdist_wheel --plat-name=manylinux_2_27_x86_64
 
     - name: Pytest
@@ -183,7 +183,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: python-package-distributions
-        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release/dist
+        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/_package/dist
 
 # --------------------------------------------------------------------------- #
 
@@ -246,7 +246,7 @@ jobs:
         cmake --build ${{github.workspace}}/build
 
     - name: Install Python Package
-      run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+      run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
 
     # - name: CTest
     #   working-directory: ${{github.workspace}}/build
@@ -256,7 +256,7 @@ jobs:
 
     - name: Build Pypi Python Package
       run: |
-        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
         python3 setup.py bdist_wheel --plat-name=macosx_11_0_x86_64
 
     - name: Pytest
@@ -268,7 +268,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: python-package-distributions
-        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release/dist
+        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/_package/dist
 
 # --------------------------------------------------------------------------- #
 
@@ -331,7 +331,7 @@ jobs:
         cmake --build ${{github.workspace}}/build
 
     - name: Install Python Package
-      run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+      run: python3 -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
 
     - name: CTest
       working-directory: ${{github.workspace}}/build
@@ -341,7 +341,7 @@ jobs:
 
     - name: Build Pypi Python Package
       run: |
-        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
         python3 setup.py bdist_wheel --plat-name=macosx_10_15_x86_64
 
     - name: Pytest
@@ -353,7 +353,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: python-package-distributions
-        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release/dist
+        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/_package/dist
 
 # --------------------------------------------------------------------------- #
 
@@ -403,7 +403,7 @@ jobs:
         cmake --build ${{github.workspace}}/build
 
     - name: Install Python Package
-      run: py -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+      run: py -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
 
     - name: CTest
       working-directory: ${{github.workspace}}/build
@@ -413,7 +413,7 @@ jobs:
 
     - name: Build Pypi Python Package
       run: |
-        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release
+        cd ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
         py setup.py bdist_wheel --plat-name=win_amd64
 
     - name: Pytest
@@ -425,7 +425,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: python-package-distributions
-        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/pypi_release/dist
+        path: ${{github.workspace}}/${{env.BUILD_TYPE}}/_package/dist
 
 # --------------------------------------------------------------------------- #
 
