--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,20 +129,20 @@ endfunction()
 #---- SECTION 2.0 - External packages/libraries -----#
 #XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX#
 
-#---- Python3  ----#
-# find_package(Python3 3.7...<3.10  COMPONENTS Interpreter Development)
-# if(${Python3_VERSION} GREATER 3.9 OR ${Python3_VERSION} LESS 3.7)
+#---- Python  ----#
+# find_package(Python 3.7...<3.10  COMPONENTS Interpreter Development)
+# if(${Python_VERSION} GREATER 3.9 OR ${Python_VERSION} LESS 3.7)
 #     message(SEND_ERROR 
 #         "INCOMPATIBLE PYTHON VERSION, expected 3.7.x < 3.9.x but found - " 
-#         ${Python3_VERSION})
+#         ${Python_VERSION})
 # endif()
-find_package(Python3 COMPONENTS Interpreter Development)
-if(${Python3_VERSION} VERSION_LESS 3.7.0)
+find_package(Python COMPONENTS Interpreter Development)
+if(${Python_VERSION} VERSION_LESS 3.7.0)
   message(SEND_ERROR 
-    "UNTESTED PYTHON VERSION, expected >3.7.x but found - " ${Python3_VERSION})
+    "UNTESTED PYTHON VERSION, expected >3.7.x but found - " ${Python_VERSION})
 endif()
 
-message("The PYTHON_VERSION is ${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR}")
+message("The PYTHON_VERSION is ${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}")
 
 #---- Pybind11  ----#
 # MUST BE CALLED AFTER FINDPYTHON: CMake 3.12+ (3.15+ recommended, 3.18.2+ ideal) 
@@ -156,7 +156,7 @@ set(pybind11_DIR ${PYBIND11_CMAKE_DIR})
 message(STATUS "PYBIND11 CMAKE_DIR PATH IS: ${PYBIND11_CMAKE_DIR}")
 message(STATUS "CMAKE_MODULE_PATH IS: ${CMAKE_MODULE_PATH}")
 
-set(PYBIND11_NOPYTHON ON)
+# set(PYBIND11_NOPYTHON ON)
 find_package(pybind11 REQUIRED)
 
 #---- Boost ----#
@@ -226,7 +226,7 @@ set(REL_PYPI_LAPKT_ROOT ${REL_PYPI_ROOT}/site_package/lapkt)
 
 #[[
 Note- When creating Python extensions, NEITHER the py extensions NOR the 
-lapkt libs need to be linked to Python3 shared libraries. Including the
+lapkt libs need to be linked to Python shared libraries. Including the
 headers is sufficient. The reference to Python symbols will be populated by
 when the library is loaded by the python interpreter. This would free the 
 python extensions from VERSION specific Python shared libs.
@@ -257,25 +257,25 @@ add_library(core SHARED)
 #---- Python extensions ----#
 
 #---- CXX Wrappers over LAPKT lib ----#
-# pybind11_add_module(wrapper SHARED)
-add_library(wrapper SHARED)
+pybind11_add_module(wrapper SHARED)
+# add_library(wrapper SHARED)
 set_target_properties(wrapper PROPERTIES
   PREFIX ""
   INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
 )
 
-target_include_directories(wrapper PRIVATE
-  ${Python3_INCLUDE_DIRS}
-)
+# target_include_directories(wrapper PRIVATE
+#   ${Python_INCLUDE_DIRS}
+# )
 
 target_link_libraries(wrapper PUBLIC
   core
-  pybind11::headers
+  # pybind11::headers
 )
 
 #---- Translate PDDL ----#
-# pybind11_add_module(pddl SHARED)
-add_library(pddl SHARED)
+pybind11_add_module(pddl SHARED)
+# add_library(pddl SHARED)
 set_target_properties(pddl PROPERTIES
   PREFIX ""
   INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
@@ -284,13 +284,13 @@ target_link_libraries(pddl PRIVATE
   core
   wrapper
 )
-target_include_directories(pddl PRIVATE
-  ${Python3_INCLUDE_DIRS}
-)
+# target_include_directories(pddl PRIVATE
+#   ${Python_INCLUDE_DIRS}
+# )
 
 #---- Planner ----#
-# pybind11_add_module(planner SHARED)
-add_library(planner SHARED)
+pybind11_add_module(planner SHARED)
+# add_library(planner SHARED)
 set_target_properties(planner PROPERTIES
   PREFIX ""
   INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
@@ -300,9 +300,9 @@ target_link_libraries(planner PRIVATE
   wrapper
   ${Boost_LIBRARIES}
 )
-target_include_directories(planner PRIVATE
-  ${Python3_INCLUDE_DIRS}
-)
+# target_include_directories(planner PRIVATE
+#   ${Python_INCLUDE_DIRS}
+# )
 
 #---- Add sub directories with source ----#
 
