--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -31,7 +31,7 @@ jobs:
     
     - name: Install platform specific requirements
       run: |
-        sudo apt-get install -y flex bison 
+        sudo apt-get install -y flex bison libfl-dev
       # python3-dev python3 libfl-dev
       
     - name: Set up Python ${{ matrix.py_version }}
@@ -126,7 +126,8 @@ jobs:
     
     - name: Install platform specific requirements
       run: |
-        sudo apt-get install -y flex bison python3-dev python3 libfl-dev
+        sudo apt-get install -y flex bison libfl-dev
+      # python3-dev python3
       
     - name: Set up Python ${{ matrix.py_version }}
       uses: actions/setup-python@v2
@@ -260,11 +261,13 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest
 
-    - uses: jungwinter/split@v2
+    - name: Split version code
+      uses: xom9ikk/split@v1
       id: split
       with:
-        msg: ${{ matrix.py_version }}
-        separator: '.'
+        string: ${{ matrix.py_version }}
+        separator: .
+        limit: -1
 
     - name: Build Pypi Python Package
       run: |
@@ -302,9 +305,9 @@ jobs:
         rm -rf ${{github.workspace}}/build
         rm -rf ${{github.workspace}}/${{env.BUILD_TYPE}}
 
-    - name: Install platform specific dependencies
-      run: |
-        brew install flex bison python3 libffi
+    # - name: Install platform specific dependencies
+    #   run: |
+    #     brew install flex bison python3 libffi
 
     - name: Set up Python ${{ matrix.py_version }}
       uses: actions/setup-python@v2
@@ -355,11 +358,13 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest
 
-    - uses: jungwinter/split@v2
+    - name: Split version code
+      uses: xom9ikk/split@v1
       id: split
       with:
-        msg: ${{ matrix.py_version }}
-        separator: '.'
+        string: ${{ matrix.py_version }}
+        separator: .
+        limit: -1
 
     - name: Build Pypi Python Package
       run: |
@@ -397,9 +402,9 @@ jobs:
         rm -rf ${{github.workspace}}/build
         rm -rf ${{github.workspace}}/${{env.BUILD_TYPE}}
 
-    - name: Install platform specific dependencies
-      run: |
-        brew install flex bison python3 libffi
+    # - name: Install platform specific dependencies
+    #   run: |
+    #     brew install flex bison python3 libffi
 
     - name: Set up Python ${{ matrix.py_version }}
       uses: actions/setup-python@v2
@@ -450,11 +455,13 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest
 
-    - uses: jungwinter/split@v2
+    - name: Split version code
+      uses: xom9ikk/split@v1
       id: split
       with:
-        msg: ${{ matrix.py_version }}
-        separator: '.'
+        string: ${{ matrix.py_version }}
+        separator: .
+        limit: -1
 
     - name: Build Pypi Python Package
       run: |
