Force cmake to choose user specified python version

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -67,6 +67,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=ON
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
@@ -164,6 +165,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF 
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
@@ -246,6 +248,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
@@ -277,7 +280,7 @@ jobs:
     - name: Pytest
       working-directory: ${{github.workspace}}
       run: |
-        pytest
+        py -m pytest
 
     - name: Lint with flake8
       run: |
@@ -343,6 +346,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
@@ -440,6 +444,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
