--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -73,6 +73,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=ON
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
@@ -166,6 +167,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
@@ -247,6 +249,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
@@ -344,6 +347,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
@@ -440,6 +444,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
+        -DPY_VERSION=${{ matrix.py_version }}
 
     - name: Build
       # Build your program with the given configuration
