--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -67,7 +67,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=ON
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
-        -DPY_VERSION=${{ matrix.py_version }}
+        -DPY_VERSION="${{ matrix.py_version }}"
 
     - name: Build
       # Build your program with the given configuration
@@ -165,7 +165,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF 
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
-        -DPY_VERSION=${{ matrix.py_version }}
+        -DPY_VERSION="${{ matrix.py_version }}"
 
     - name: Build
       # Build your program with the given configuration
@@ -248,7 +248,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
-        -DPY_VERSION=${{ matrix.py_version }}
+        -DPY_VERSION="${{ matrix.py_version }}"
 
     - name: Build
       # Build your program with the given configuration
@@ -346,7 +346,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
-        -DPY_VERSION=${{ matrix.py_version }}
+        -DPY_VERSION="${{ matrix.py_version }}"
 
     - name: Build
       # Build your program with the given configuration
@@ -444,7 +444,7 @@ jobs:
         -DCMAKE_SPHINX_DOCS=OFF
         -DCMAKE_STATIC_BOOST=ON
         -DCMAKE_TESTING_ENABLED=ON
-        -DPY_VERSION=${{ matrix.py_version }}
+        -DPY_VERSION="${{ matrix.py_version }}"
 
     - name: Build
       # Build your program with the given configuration
