Issue with 3.8 version on macos

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -299,6 +299,8 @@ jobs:
     strategy:
       matrix:
         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        exclude:
+          - py_version: "3.8"
 
     steps:
     - uses: actions/checkout@v2
@@ -397,6 +399,8 @@ jobs:
     strategy:
       matrix:
         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        exclude:
+          - py_version: "3.8"
 
     steps:
     - uses: actions/checkout@v2
