Windows build fails with Python3.6

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -222,6 +222,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "${{ matrix.py_version }}"
+        exclude:
+          - py_version: "3.6"
 
     - name: Install pip dependencies
       run: |
