--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -301,8 +301,8 @@ jobs:
     strategy:
       matrix:
         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.8"
+        # exclude:
+        #   - py_version: "3.8"
 
     steps:
     - uses: actions/checkout@v2
@@ -400,8 +400,8 @@ jobs:
     strategy:
       matrix:
         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.8"
+        # exclude:
+        #   - py_version: "3.8"
 
     steps:
     - uses: actions/checkout@v2
@@ -498,8 +498,8 @@ jobs:
     strategy:
       matrix:
         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.8"
+        # exclude:
+        #   - py_version: "3.8"
 
     steps:
     - uses: actions/checkout@v2
