--- a/.github/workflows/test_pypi_package.yml
+++ b/.github/workflows/test_pypi_package.yml
@@ -44,12 +44,12 @@ jobs:
         python3 -m pip install --upgrade pip
         python3 -m pip install --user lapkt
 
-    - name: Print GLIBC version
+    - name: Find path to lapkt
       run: which lapkt_cmd.py
 
     - name: Test lapkt installation
       run: |
-        python3 "$HOME/.local/bin/lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl"
+        lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
         cat plan.ipc
 
     - name: Pytest
@@ -83,7 +83,7 @@ jobs:
 
     - name: Test lapkt installation
       run: |
-        python3 "$HOME/.local/bin/lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl"
+        lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
         cat plan.ipc
 
     - name: Pytest
@@ -119,7 +119,7 @@ jobs:
 
     - name: Test lapkt installation
       run: |
-        py "c:\\hostedtoolcache\\windows\\python\\3.10.2\\x64\\scripts\\lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl"
+        py c:\\hostedtoolcache\\windows\\python\\3.10.2\\x64\\scripts\\lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
         cat plan.ipc
 
     - name: Pytest
@@ -154,7 +154,7 @@ jobs:
 
     - name: Test lapkt installation
       run: |
-        python3 "$HOME/.local/bin/lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl"
+        lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
         cat plan.ipc
 
     - name: Pytest
@@ -188,7 +188,7 @@ jobs:
 
     - name: Test lapkt installation
       run: |
-        python3 "$HOME/.local/bin/lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl"
+        lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
         cat plan.ipc
 
     - name: Pytest
